<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.digitech_maker.pvt2025.MainWindow">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mw_textview3"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="82dp" />

    <RadioGroup
        android:id="@+id/radioPengukuran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mw_dua0kali"
            android:checked="true"
            android:id="@+id/dua0kali" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mw_tiga0kali"
            android:id="@+id/tiga0kali" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mw_empat0kali"
            android:id="@+id/empat0kali" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mw_enam0kali"
            android:id="@+id/enam0kali" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mw_textview4"
        android:id="@+id/textView4"
        android:layout_below="@+id/radioPengukuran"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="82dp" />


    <RadioGroup
        android:id="@+id/radioPeriode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        >


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mw_limadetik"
            android:checked="true"
            android:id="@+id/limadetik" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mw_tujuhdetik"
            android:id="@+id/tujuhdetik" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mw_sepuluhdetik"
            android:id="@+id/sepuluhdetik" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mw_cahayabtn"
        android:id="@+id/cahayaBtn"
        android:layout_below="@+id/radioPeriode"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mw_suarabtn"
        android:id="@+id/suaraBtn"
        android:layout_below="@+id/radioPeriode"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:id="@+id/closebutton"
        android:enabled="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mw_reportbtn"
        android:id="@+id/reportbutton"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/cahayaBtn"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mw_logoutbtn"
        android:id="@+id/logoutButton"
        android:layout_below="@+id/reportbutton"
        android:layout_marginTop="65dp"
        android:layout_alignRight="@+id/reportbutton"/>


</RelativeLayout>
